--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                   <h4 class="mb-15">Developer</h4>
                   <p>
                     I am a fresher data enthusiast with practical exposure to Python, Java, Django, Flask, Postman,
-                    Docker, AWS, GCP, MySQL, PostgreSQL, and MongoDB, gained through internships and hands-on projects.
+                    Docker,AI and ML Algorithms,Deep Learning ,GenAI, AWS, GCP, MySQL, PostgreSQL, and MongoDB, gained through internships and hands-on projects.
                     I have developed skills in building web applications, APIs, and managing cloud environments. I
                     contributed to data analytics and software development projects, working on tasks like backend
                     development, creating dashboards, and optimizing ETL processes. I contributed to data analytics and
@@ -791,7 +791,7 @@
                   <div class="card-content">
                     <h3>Abhyaz</h3>
                     <p>Data Analyst Intern</p>
-                    <p><strong>Duration:</strong> Current</p>
+                    <p><strong>Duration:</strong> 1 Month</p>
                     <p><strong>Mode:</strong> Remote</p>
                     <p>Python - Data collection - Data cleaning - Data visualization </p>
                   </div>
@@ -804,7 +804,7 @@
                   <div class="card-content">
                     <h3>Innomatics Research Lab</h3>
                     <p>MERN Full Stack</p>
-                    <p><strong>Duration:</strong> Current</p>
+                    <p><strong>Duration:</strong> 2 Months</p>
                     <p><strong>Mode:</strong> Remote</p>
                     <p>MongoDB - Express - Angular - NodeJs</p>
                   </div>
@@ -918,6 +918,27 @@
                   </div>
                   <div class="repo-footer">
                     <span class="blog-post-date">2024-09-19</span>
+                    <div class="repo-stats">
+                      <img src="img/star.svg" class="icon" /><span>1</span>
+                      <img src="img/fork.svg" class="icon" /><span>0</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+<div class="col-sm-4 mb-40">
+                <div class="repo-card">
+                  <div class="repo-content">
+                    <span class="blog-cat">
+                      <span class="lang" style="background-color: #e34c26;"></span>
+                      <span style="color: #1c457e;">Python, TensorFlow, Keras, OpenCV</span>
+                    </span>
+                    <a href="https://github.com/kiruba11k/ImageSegmentation" target="_blank">
+                      <h4>Image Segmentation using U-Net</h4>
+                    </a>
+                    <p style="color: #480631;">An U-Net-based deep learning model for semantic segmentation, achieving accurate pixel-wise classification on images.</p>
+                  </div>
+                  <div class="repo-footer">
+                    <span class="blog-post-date">2024-09-28</span>
                     <div class="repo-stats">
                       <img src="img/star.svg" class="icon" /><span>1</span>
                       <img src="img/fork.svg" class="icon" /><span>0</span>
