--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <meta property="og:url" content="https://kiruba11k.github.io" />
   <meta property="og:description" content="Developer Learner looking forward to Share and Gain knowledgeable stuff" />
   <meta property="og:type" content="profile" />
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
@@ -148,6 +150,12 @@
     }
 
     /* Body Background */
+    body{
+      position: absolute;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+    }
     body {
       background: linear-gradient(135deg, #74ebd5 0%, #9face6 100%);
       margin: 0;
@@ -1198,7 +1206,24 @@
   <script src="./js/repo.js"></script>
   <!-- AOS JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-
+<script>
+        document.addEventListener("DOMContentLoaded", function () {
+            if (window.VANTA) {
+                window.VANTA.FOG({
+                    el: ".body",
+                    mouseControls: true,
+                    touchControls: true,
+                    gyroControls: false,
+                    minHeight: 200.00,
+                    minWidth: 200.00,
+                    highlightColor: 0x8306a,
+                    midtoneColor: 0x2375e,
+                    lowlightColor: 0x74174,
+                    baseColor: 0xffffff
+                });
+            }
+        });
+    </script>
   <script>
     AOS.init({
       duration: 1200,  // Animation duration in ms
