--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
   <meta property="og:url" content="https://kiruba11k.github.io" />
   <meta property="og:description" content="Developer Learner looking forward to Share and Gain knowledgeable stuff" />
   <meta property="og:type" content="profile" />
-  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.fog.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+<script src="three.r134.min.js"></script>
+<script src="vanta.fog.min.js"></script>
+
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css"
@@ -1199,26 +1200,26 @@
   </div>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <script src="./js/repo.js"></script>
+
+  <script src="three.r134.min.js"></script>
+<script src="vanta.fog.min.js"></script>
+<script>
+VANTA.FOG({
+  el: "#body",
+  mouseControls: true,
+  touchControls: true,
+  gyroControls: false,
+  minHeight: 200.00,
+  minWidth: 200.00,
+  highlightColor: 0x8306a,
+  midtoneColor: 0x2375e,
+  lowlightColor: 0x74174,
+  baseColor: 0xffffff
+})
+</script>
   <!-- AOS JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-<script>
-        document.addEventListener("DOMContentLoaded", function () {
-            if (window.VANTA) {
-                window.VANTA.FOG({
-                    el: ".body",
-                    mouseControls: true,
-                    touchControls: true,
-                    gyroControls: false,
-                    minHeight: 200.00,
-                    minWidth: 200.00,
-                    highlightColor: 0x8306a,
-                    midtoneColor: 0x2375e,
-                    lowlightColor: 0x74174,
-                    baseColor: 0xffffff
-                });
-            }
-        });
-    </script>
+
   <script>
     AOS.init({
       duration: 1200,  // Animation duration in ms
