--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
 <script src="vanta.fog.min.js"></script>
 <script>
 VANTA.FOG({
-  el: "#body",
+  el: ".body",
   mouseControls: true,
   touchControls: true,
   gyroControls: false,
