--- a/index.html
+++ b/index.html
@@ -53,7 +53,22 @@
     gtag('config', 'G-C4NJD8J3MD');
   </script>
   <style>
+body
+{
+  overflow:hidden;
+  background-color:#000030;
+  background-size:100%;
+  background-position:center;
+  
+}
 
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-size: auto;
+    background-position: right;
+  }
+}
 .starfall {
     position: absolute;
     height: 100%;
