--- a/index.html
+++ b/index.html
@@ -2565,12 +2565,26 @@
 <body>
   <div class="starfall">
     <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
 
   <div class="main-wrapper">
+        <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
     <div class="bg-struct bg-img"></div>
 
     <!-- Header Section -->
     <div class="mdl-js-layout mdl-layout--fixed-header">
+          <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
       <header class="mdl-layout__header ice-header">
         <div class="mdl-layout__header-row mdl-scroll-spy-1">
           <a href="index.html">
@@ -2586,6 +2600,11 @@
             <li><a class="mdl-navigation__link" data-scroll href="#contact_sec">contact</a></li>
           </ul>
   <div class="falling-star"></div>
+              <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
 
           <!-- Menu Button -->
           <button id="demo-menu-lower-right" class="mdl-button mdl-js-button mdl-button--icon ver-more-btn">
@@ -2609,7 +2628,11 @@
         </div>
       </header>
         <div class="falling-star"></div>
-
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
       <div class="mdl-layout__drawer ice-drawer">
         <div class="nicescroll-bar">
           <div class="drawer-profile-wrap">
@@ -2719,6 +2742,11 @@
                     </div>
                     <div class="col-md-7 col-xs-12">
                       <div class="info-wrap">
+                            <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
                         <h1>Mr. Kirubakaran Periyasamy</h1>
                         <h5 class="mt-20 font-red">Developer • Analyst • Learner</h5>
                         <div class="mt-30">
@@ -2756,6 +2784,11 @@
 
           <!-- Portfolio Section -->
           <section id="portfolio_sec" class="profile-sec sec-pad-top-sm">
+                <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
               <div class="falling-star"></div>
 
             <h2 class="mb-30">What I Do</h2>
@@ -2763,6 +2796,11 @@
 
               <!-- Developer Card -->
               <div class="col-md-4 col-xs-12 mb-30">
+                    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
                 <div class="mdl-card mdl-shadow--2dp text-center">
                   <i class="zmdi zmdi-code font-blue profile-icon"></i>
                   <h4 class="mb-15">Developer</h4>
@@ -2780,6 +2818,11 @@
 
               <!-- Adult Gamer Card -->
               <div class="col-md-4 col-xs-12 mb-30">
+                    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
                 <div class="mdl-card mdl-shadow--2dp text-center">
                   <i class="zmdi zmdi-format-color-text font-green profile-icon"></i>
                   <h4 class="mb-15">Adult Gamer</h4>
@@ -2797,6 +2840,11 @@
 
               <!-- Learner Card -->
               <div class="col-md-4 col-xs-12 mb-30">
+                    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
                 <div class="mdl-card mdl-shadow--2dp text-center">
                   <i class="zmdi zmdi-book font-yellow profile-icon"></i>
                   <h4 class="mb-15">Learner</h4>
@@ -2819,6 +2867,11 @@
           </section>
 
           <section id="interest_sec" class="interest-sec sec-pad-top-sm">
+                <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
+    <div class="falling-star"></div>
             <h2 class="mb-30">interests</h2>
             <div class="row">
               <div class="col-md-2 col-sm-4 col-xs-6 mb-30">
